--- a/day-2/styles/pricing.css
+++ b/day-2/styles/pricing.css
@@ -25,17 +25,17 @@ blockquote p {
 }
 
 table {
-    border: 1px solid #ddd;
+    border: 1px solid #bbb;
     border-collapse: collapse;
     width: 100%;
 }
 
   th, td {
-    border: 1px solid #ddd;
+    border: 1px solid #bbb;
     padding: 8px;
     text-align: center;
 }
 
 img {
-    border: 2px dashed #999;
+    border: 2px dashed #aaa;
 }
