--- a/day-3/day-03/styles/styles.css
+++ b/day-3/day-03/styles/styles.css
@@ -12,6 +12,26 @@ h2 {
 	color: darkred;
 }
 
+a{
+	color: #338033;
+}
+
+a:visited {
+	color: #003800;
+}
+
+a:hover, a:focus{
+	background-color: #003800;
+	color: #ffffff;
+}
+
+a:focus{
+	outline: 1px dotted #003800;
+}
+
+a:active{
+	color: #ff0000;
+}
 nav li{
 	display: inline-block;
 }
