--- a/Day-4/day-04/styles/services.css
+++ b/Day-4/day-04/styles/services.css
@@ -7,8 +7,7 @@ body {
 	font-weight: 400;
 	line-height: 1.5;
 	color: #282828;
-	max-width: 31.25rem;
-	margin: 0 auto;
+	
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -80,10 +79,24 @@ nav a {
 	text-decoration: none;
 }
 
+
+/* Main styles */
+
+main{
+	max-width: 75rem;
+	margin: 0 auto;
+	padding: 0 1rem;
+
+}
 /* Services Styles */
+.cards{
+	display: flex;
+}
+
 .services article {
 	background-color: #caffca;
 	padding: 1rem 2rem;
+	margin-right: 1rem;
 	margin-bottom: 2rem;
 }
 
@@ -109,7 +122,20 @@ nav a {
 	background-color: #234723;
 }
 
+@media (min-width: 50em){
+	.cards {
+		flex-direction: column;
+		flex-direction: column-reverse;
+	}
+	.services article{
+		background-color: #caefff;
+	}
 
+	.services a{
+		background-color: #346270;
+	}
+	
+}
 /* Testimonials Styles */
 .testimonials img {
 	display: block;
