--- a/Landing Page/styles/index.css
+++ b/Landing Page/styles/index.css
@@ -20,10 +20,10 @@
     margin: 1rem 0;
 }
 
-.site-logo img {
+.site-header img {
     display: block;
-	width: 3rem;
-    height: 3rem;
+	width: 5rem;
+    height: 5rem;
 }
 
 
@@ -50,10 +50,10 @@
 
 .nav-menu li {
 	list-style: none;
-	background-color: lightblue;
+	background-color: rgb(216, 237, 244);
 	line-height: 3rem;
 	text-align: center;
-	font-family: 'Playfair Display', serif
+	font-family: 'Playfair Display', serif;
 }
 
 .nav-menu a {
@@ -125,7 +125,7 @@ body{
 	font-weight: 400;
 	line-height: 1.5;
 	color: black;
-	background-color: rgb(190, 230, 243);
+	background-color: rgb(216, 237, 244);
 }
 h1 {
 	font-family: Georgia, Times, "Times New Roman", serif;
